# ST3GG

./: .gitignore  AGENTS.md  README.md  analysis_tools.py  app.py  cli.py  img_core.py  index.html  injector.py  jailbreak_core.py  matryoshka_core.py  network_core.py  plan-advanced-text-encoders.md  plan-classic-text-encoders.md  pvd_core.py  pyproject.toml  requirements.txt  specter.py  steg_core.py  stegg_cli.py  text_core.py  transforms_core.py  tui.py  unicode_tags.py  webui.py
examples/: README.md  example_cjk_homoglyph.txt  example_covert_timing.pcap  example_dns_tunnel.pcap  example_dns_txt.pcap  example_hidden.pcap  example_http_headers.pcap  example_icmp_steg.pcap  example_ipid_covert.pcap  example_tcp_covert.pcap  example_tcp_urgent.pcap  example_tcp_window.pcap  example_ttl_covert.pcap  generate_examples.py
examples/pipelines/: pipeline_covert_text.md
skills/stegg-stego/: REFERENCE.md  SKILL.md
st3ggmcp/: README.md  TRANSPORT_MATRIX.md  __init__.py  field_guide.md  server.py  tools.py
st3ggmcp/tools/: __init__.py  _common.py  image.py  jailbreak.py  meta.py  network.py  text.py  triage.py
tests/: conftest.py  test_comprehensive.py  test_examples.py  test_matryoshka.py  test_matryoshka_core.py
tests/examples/: test_archive_examples.py  test_audio_examples.py  test_code_examples.py  test_document_examples.py  test_edge_cases.py  test_false_positives.py  test_image_examples.py  test_pcap_examples.py  test_unicode_text_examples.py
tests/pipelines/: test_pipeline_covert_text.py  test_pipeline_crypto_lsb.py  test_pipeline_injector_stack.py  test_pipeline_matryoshka.py  test_pipeline_multichannel.py  test_pipeline_polyglot.py  test_zz_pipeline_artifacts.py
tests/unit/: test_capacity.py  test_channel_presets.py  test_crypto.py  test_dct_roundtrip.py  test_detect_encoding.py  test_file_type_detection.py  test_img_core_chunks.py  test_img_core_dct.py  test_img_core_lsb.py  test_img_core_pvd.py  test_injector.py  test_jailbreak_core.py  test_mcp_coverage_gaps.py  test_network_core.py  test_pvd_core.py  test_pvd_executors.py  test_specter.py  test_stdio_transport.py  test_steg_core_roundtrip.py  test_text_core.py  test_tool_registry.py  test_transforms_core.py  test_unicode_tags.py
tests/unit/fixtures/pvd/: js_reference.json
tests/unit/fixtures/text_core/: braille_stego.txt  capitalization_cover.txt  capitalization_stego.txt  cjk_homoglyph_cover.txt  cjk_homoglyph_stego.txt  combining_stego.txt  confusable_cover.txt  confusable_stego.txt  cyrillic_homoglyph_stego.txt  directional_stego.txt  emoji_stego.txt  hangul_cover.txt  hangul_stego.txt  homoglyph_cover.txt  invisible_ink_stego.txt  mathbold_cover.txt  mathbold_stego.txt  skintone_stego.txt  variation_stego.txt  whitespace_cover.txt  whitespace_stego.txt  zero_width_stego.txt
